# python-project-lvl1

./: .Makefile.swp  .travis.yml  .~lock.hist#  Makefile  README.md  pyproject.toml  requirements.txt
brain_games/: __init__.py  brain_ever.py  cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
frankylamps_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
