[tool.poetry]
name = "frankylamps_brain_games"
version = "0.7.0"
description = "1st project of Python course on hexlet.io"
url = "https://test.pypi.org/project/frankylamps-brain-games/"
authors = ["Roman <fcdm@inbox.ru>"]
packages = [
    { include = "brain_games" },
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
random2 = "^1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

