[tool.poetry]
name = "frankylamps_brain_games"
version = "0.7.0"
description = "1st project of Python course on hexlet.io"
repository = "https://test.pypi.org/project/frankylamps-brain-games/"
authors = ["Roman <fcdm@inbox.ru>"]
packages = [
    { include = "brain_games" },
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta"
]

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
random2 = "^1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:greet"
brain-even = "brain_games.scripts.brain_even:launch_even_game"
brain-calc = "brain_games.scripts.brain_calc:launch_calc_game"
brain-gcd = "brain_games.scripts.brain_gcd:launch_gcd_game"
brain-progression = "brain_games.scripts.brain_progression:launch_progression_game"
brain-prime = "brain_games.scripts.brain_prime:launch_prime_game"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

